- Add support for merging files from torrents with the same name - Add infohash as a folder naming - Other minor bugs

--- a/pkg/web/templates/config.html
+++ b/pkg/web/templates/config.html
@@ -291,6 +291,7 @@
                         <option value="original">Original name</option>
                         <option value="original_no_ext">Original name with No Ext</option>
                         <option value="id">Use ID</option>
+                        <option value="infohash">Use Infohash</option>
                     </select>
                 </div>
                 <div class="col-md-3 mb-3">
