--- a/pkg/web/templates/config.html
+++ b/pkg/web/templates/config.html
@@ -48,7 +48,7 @@
                         </li>
                         <li class="nav-item">
                             <button type="button" class="nav-link fw-medium" data-step="4">
-                                <i class="bi bi-4-circle me-1"></i>Arr Config
+                                <i class="bi bi-4-circle me-1"></i>*Arrs
                             </button>
                         </li>
                         <li class="nav-item">
@@ -204,7 +204,7 @@
                             <div class="col mb-3">
                                 <div class="form-check me-3 d-inline-block">
                                     <input type="checkbox" class="form-check-input" name="qbit.skip_pre_cache" id="qbit.skip_pre_cache">
-                                    <label class="form-check-label" for="qbit.skip_pre_cache">Skip Pre-Cache On Download(This caches a tiny part of your file to speed up import)</label>
+                                    <label class="form-check-label" for="qbit.skip_pre_cache">Disable Pre-Cache On Download (unchecking this caches a tiny part of your file to speed up import)</label>
                                 </div>
                             </div>
                         </div>
