- Fix nil checks - Enable add arr to config page - Other minor fixes

--- a/pkg/web/templates/config.html
+++ b/pkg/web/templates/config.html
@@ -228,7 +228,7 @@
                 <div class="setup-step d-none" id="step4">
                     <div class="section mb-5">
                         <div id="arrConfigs"></div>
-                        <div class="mb-3 d-none">
+                        <div class="mb-3">
                             <button type="button" id="addArrBtn" class="btn btn-secondary">
                                 <i class="bi bi-plus"></i> Add New Arr
                             </button>
